--- a/client/src/pages/HomePage/homepage.scss
+++ b/client/src/pages/HomePage/homepage.scss
@@ -10,20 +10,20 @@
 //     display: flex;
 // }
 
-.me-image {
-    align-self: end;
-    // background-color: pink;
-    max-height: 90%;
-    width: 100%;
-}
+// .me-image {
+//     align-self: end;
+//     // background-color: pink;
+//     max-height: 90%;
+//     width: 100%;
+// }
 
-.container {
+// .container {
 
-    .hidden {
-        display: none;
-    }
+//     .hidden {
+//         display: none;
+//     }
 
-    flex-wrap: wrap;
-    // flex-direction: row-reverse;
-    // overflow: scroll;
-}
+//     flex-wrap: wrap;
+//     // flex-direction: row-reverse;
+//     // overflow: scroll;
+// }
